Seperated settings into infos and settings

--- a/templates/base/admin/setting.latte
+++ b/templates/base/admin/setting.latte
@@ -15,7 +15,7 @@
                             <th></th>
                             <th>{text('setting.name')}</th>
                             <th>{text('setting.value')}</th>
-                            <th>{text('setting.info')}</th>
+                            <th>{text('setting.description')}</th>
                             <th></th>
                         </tr>
                         </thead>
