--- a/templates/base/user/login.latte
+++ b/templates/base/user/login.latte
@@ -2,7 +2,7 @@
 
 {block main}
     <main class="grow p-4">
-        <form action="{path('BASE_PATH') . 'admin/user/login/'}" method="POST" enctype="multipart/form-data"
+        <form action="{path('BASE_PATH') . 'user/login/'}" method="POST" enctype="multipart/form-data"
               class="max-w-xl mx-auto">
             {csrf()}
 
@@ -29,8 +29,8 @@
                 </div>
 
                 <div class="text-center">
-                    <a class="text-xs" href="{path('BASE_PATH') . 'admin/register'}">{text('login.link.register')}</a><br>
-                    <a class="text-xs" href="{path('BASE_PATH') . 'admin/reset'}">{text('login.link.reset')}</a>
+                    <a class="text-xs" href="{path('BASE_PATH') . 'user/register'}">{text('login.link.register')}</a><br>
+                    <a class="text-xs" href="{path('BASE_PATH') . 'user/reset'}">{text('login.link.reset')}</a>
                 </div>
 
             </div>
