--- a/templates/base/user/logout.latte
+++ b/templates/base/user/logout.latte
@@ -2,7 +2,7 @@
 
 {block main}
     <main class="grow p-4">
-        <form action="{path('BASE_PATH') . 'admin/user/logout'}" method="POST" enctype="multipart/form-data">
+        <form action="{path('BASE_PATH') . 'user/logout'}" method="POST" enctype="multipart/form-data">
             {csrf()}
 
             <div class="space-y-4">
