--- a/templates/base/user/reset.latte
+++ b/templates/base/user/reset.latte
@@ -2,7 +2,7 @@
 
 {block main}
     <main class="grow p-4">
-        <form action="{path('BASE_PATH') . 'admin/user/reset'}" method="POST" enctype="multipart/form-data"
+        <form action="{path('BASE_PATH') . 'user/reset'}" method="POST" enctype="multipart/form-data"
               class="max-w-xl mx-auto">
             {csrf()}
 
