--- a/templates/base/head.latte
+++ b/templates/base/head.latte
@@ -20,13 +20,11 @@
     <meta property="og:description" content="{setting('description')}">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="{setting('language')}"/>
-    <meta property="og:image"
-          content="{!setting('image') ?: setting('image')}"/>
+    <meta property="og:image" content="{setting('image')}"/>
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="{setting('title')}">
     <meta name="twitter:description" content="{setting('description')}">
-    <meta name="twitter:image"
-          content="{!setting('image') ?: setting('image')}">
+    <meta name="twitter:image" content="{setting('image')}">
 
     <link rel="shortcut icon" type="image/x-icon" href="{media('favicon/favicon.ico')}">
     <link rel="shortcut icon" type="image/gif" href="{media('favicon/favicon.gif')}">
