--- a/templates/base/include/main.latte
+++ b/templates/base/include/main.latte
@@ -1,3 +1,10 @@
-<main class="grow p-4">
-    main.latte
+<main class="grow p-4 w-full max-w-5xl mx-auto">
+    <div class="space-y-4">
+        <h1 class="leading-none text-6xl font-bold">ivy’s ready for you</h1>
+        <p>Start building and play around to make something great. This template is built with <strong>Tailwind CSS</strong>. To get started with your styles, just jump into your base template folder and run:</p>
+        <div class="mockup-code w-full">
+            <pre data-prefix="~"><code>cd templates/base</code></pre>
+            <pre data-prefix="~/templates/base"><code>npx @tailwindcss/cli -i css/input.css -o css/output.css --watch</code></pre>
+        </div>
+    </div>
 </main>
