--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,1 +1,10 @@
-/var/www/templates/DEMO/css/custom.css
+/* Define a transition duration during page visits */
+html.is-changing .transition-fade {
+    transition: opacity 0.25s;
+    opacity: 1;
+}
+
+/* Define the styles for the unloaded pages */
+html.is-animating .transition-fade {
+    opacity: 0;
+}
