--- a/templates/base/include/footer.latte
+++ b/templates/base/include/footer.latte
@@ -1,6 +1,6 @@
 <footer class="flex border-t border-base-300 p-4 place-items-stretch">
     <aside class="grow leading-none">
-        <small>Build with <a href="https://dooper.io/ivy" target="_blank"
+        <small>Built with <a href="https://dooper.io/ivy" target="_blank"
                          class="hover:underline">ivy</a> © {date("Y")}</small>
     </aside>
     <nav>
