--- a/templates/base/include/main.latte
+++ b/templates/base/include/main.latte
@@ -1,13 +1,13 @@
 <main class="grow p-4 w-full max-w-3xl mx-auto">
     <div class="space-y-4">
         <div>
-            <h1 class="leading-none text-6xl font-bold">ivy’s ready for you</h1>
-            <h2 class="leading-none text-6xl">Start building your website</h2>
+            <h1 class="leading-none text-6xl font-bold">ivy is ready for you</h1>
+            <h2 class="leading-none text-6xl">start building your website</h2>
         </div>
         <p>This template is built with <strong>Tailwind CSS</strong>. To get started with your styles, just jump into your base template folder and run the Tailwind CLI:</p>
         <div class="mockup-code w-full">
-            <pre data-prefix="~"><code>cd templates/base</code></pre>
-            <pre data-prefix="~/templates/base"><code>npx @tailwindcss/cli -i css/input.css -o css/output.css --watch</code></pre>
+            <pre><code>cd templates/base</code></pre>
+            <pre><code>npx @tailwindcss/cli -i css/input.css -o css/output.css --watch</code></pre>
         </div>
     </div>
 </main>
