--- a/templates/base/include/main.latte
+++ b/templates/base/include/main.latte
@@ -4,7 +4,7 @@
             <h1 class="leading-none text-6xl font-bold">ivy is ready for you</h1>
             <h2 class="leading-none text-6xl">start building your website</h2>
         </div>
-        <p>This template is built with <strong>Tailwind CSS</strong>. To get started with your styles, just jump into your base template folder and run the Tailwind CLI:</p>
+        <p>This template is built with <a class="link" href="https://latte.nette.org/">Latte</a> and <a class="link" href="https://tailwindcss.com/">Tailwind</a>. To get started with your styles, just jump into your base template folder and run the Tailwind CLI:</p>
         <div class="mockup-code w-full">
             <pre><code>cd templates/base</code></pre>
             <pre><code>npx @tailwindcss/cli -i css/input.css -o css/output.css --watch</code></pre>
