--- a/templates/base/head.latte
+++ b/templates/base/head.latte
@@ -1,8 +1,8 @@
 {block head}
     <meta charset="utf-8"/>
+    <title>{setting('title')}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0">
-    <!-- <meta http-equiv="Content-Security-Policy" content="script-src 'none'"> -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="{setting('name')}">
     <meta name="theme-color" content="#ffffff">
@@ -31,6 +31,4 @@
     <link rel="shortcut icon" type="image/png" href="{media('favicon/favicon.png')}">
 
     <link rel="manifest" href="{path('PUBLIC_URL') . 'manifest.json'}" crossorigin="use-credentials">
-
-    <title>{setting('title')}</title>
 {/block}
