--- a/templates/base/include/footer.latte
+++ b/templates/base/include/footer.latte
@@ -5,7 +5,7 @@
     </aside>
     <nav>
         <div class="grid grid-flow-col gap-4">
-            <a href="https://github.com/joepdooper/ivy" target="_blank">
+            <a href="https://github.com/joepdooper/ivy" target="_blank" aria-label="View it on Github">
                 <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
                  viewBox="0 0 20 20">
                     <path fill-rule="evenodd"
