--- a/plugins/items/template/admin_buttons.latte
+++ b/plugins/items/template/admin_buttons.latte
@@ -1,5 +1,9 @@
 <div n:if="$item" class="dissableSortable join relative z-10">
-    {button type:visible, name:'publish', value:$item->published, id:$item->id}
-    {button type:save, name:'save', id:$item->id}
-    {button type:delete, name:'delete', value:'', id:$item->id, placeholder:$item->name}
+    {if $upload ?? false}
+        {button type:upload, name:'upload', id:'upload_' . $item->id}
+    {else}
+        {button type:visible, name:'publish', value:$item->published, id:'publish_'.$item->id}
+    {/if}
+    {button type:save, name:'save', id:'save_'.$item->id}
+    {button type:delete, name:'delete', value:'', id:'delete_'.$item->id, placeholder:$item->name}
 </div>
